# L0Sysman_basic_test

device_properties/: CMakeLists.txt  main.cpp
frequency/: .main.cpp.swp  CMakeLists.txt  main.cpp
zello_sysman/: main.cpp
